--- a/server/package.json
+++ b/server/package.json
@@ -12,5 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "formidable": "^1.2.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
